...
        documents = "Documents",
        apps = "Apps",
        recent = "Recent",
        analysis = "Analysis",
        trash = "Trash",
        storageRootPath = "/storage/emulated/0",
        downloadsRootPath = "/storage/emulated/0/Download",
    )

    val remoteSources: List<FileSource> = FileSources.getRemoteSources(
        cloud = "Cloud",
        smb = "SMB/CIFS",
        ftp = "FTP",
...
